--- a/index.html
+++ b/index.html
@@ -6,110 +6,122 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Jhonatan Cruz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" type="image/png" href="images/favicon.png">
+		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-				</div>
-			</header>
-
+		<header id="header" style="text-align: right; padding-right: 50px;">
+			<div class="inner">
+				<a href="#" class="image avatar" style="width: 150px; height: 150px; border-radius: 50%; overflow: hidden; display: inline-flex; align-items: center; justify-content: center; margin-left: auto; margin-right: 50px;">
+					<img src="images/JhonyCV.jpg" alt="Jhonatan Cruz" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;" />
+				</a>
+        		<h1>
+            		<strong>
+						I’m a game developer specializing as an XR software engineer, with over 4 years of experience creating virtual, augmented, and mixed reality experiences in Unity.
+						<br />
+						My work spans from interactive applications to gamified projects, and this portfolio showcases professional projects I’ve developed throughout my career.
+            		</strong>
+        		</h1>
+   			 </div>
+		</header>
+		
 		<!-- Main -->
 			<div id="main">
 
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>XR Demo Reel 2025</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+								<video class="image fit thumb" controls>
+									<source src="videos/00.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>My Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<video class="image fit thumb" controls>
+									<source src="videos/01.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Guardian VR</h3>
+								<p>A VR simulation for learning safety procedures and basic operations in a factory. Users practice proper entry, wearing protective equipment, identifying safe walkways, working through different processes for sorting and separating parts, locating emergency exits and fire extinguishers, and responding to fire or evacuation scenarios</p>
+							</article>							
+							<article class="col-6 col-12-xsmall work-item">
+								<video class="image fit thumb" controls>
+									<source src="videos/02.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Previon VR</h3>
+								<p>Developed for the 2023 hackathon, this virtual reality project set in the Alameda neighborhood of Queretaro, Mexico allows users to experience urban traffic from multiple perspectives, including those of drivers and pedestrians with varying abilities. The project aims to raise awareness about the right to mobility and the challenges posed by road violence.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<video class="image fit thumb" controls>
+									<source src="videos/03.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Milling Machine VR</h3>
+								<p>A VR training simulation for learning the safe and efficient operation of a milling machine. Users are guided through essential procedures, including setting up the equipment and performing various cuts on a metal block. The training concludes with a practical exam to apply what has been learned during the simulation.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<video class="image fit thumb" controls>
+									<source src="videos/04.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Automaton Hunters VR</h3>
+								<p>Automaton Hunters is an intense VR shooter, to escape the virtual world by defeating waves of enemies mastering a variety of weapons to survive.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<video class="image fit thumb" controls>
+									<source src="videos/05.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Cat-A!!!-clysm VR</h3>
+								<p>A Global Game Jam 2024 game, this on-rails VR shooter immerses you in a cat's dream. After observing its owner play video games, the feline envisions a bizarre world dominated by chaos and war, where you'll face surreal challenges and intense battles.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<video class="image fit thumb" controls>
+									<source src="videos/06.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Habitra AR</h3>
+								<p>An AR app that lets users preview houses before purchase, visualizing the property with customizable elements such as gardens, vehicles, trees, paint colors, and other variations. This interactive experience helps users design and explore their ideal home before construction or acquisition.</p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
 					</section>
+
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
+						<p>If you are interested in my work, please feel free to email me.</p>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										Encino 600 Int. B8<br />
+										Ciudad Maderas Residencial El Marqués<br />
+										Quéretaro, Mex.
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										(+52)442-871-9270
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">jhonyworklink@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -440,13 +452,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/jhonywheeler" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/jhonatan-cruz-reyes-40a771203/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://jhonywheeler.itch.io" target="_blank" class="icon brands fa-itch-io"><span class="label">Itch.io</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li> Jhonatan Cruz Reyes</a></li>
 					</ul>
 				</div>
 			</footer>
