--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>XR Demo Reel 2025</h2>
+							<h2>Game Dev Demo Reel 2025</h2>
 						</header>
 								<video class="image fit thumb" controls>
 									<source src="videos/00.mp4" type="video/mp4">
@@ -56,31 +56,31 @@
 									<source src="videos/01.mp4" type="video/mp4">
 									Tu navegador no soporta la reproducción de videos.
 								</video>
-								<h3>Guardian VR</h3>
-								<p>A VR simulation for learning safety procedures and basic operations in a factory. Users practice proper entry, wearing protective equipment, identifying safe walkways, working through different processes for sorting and separating parts, locating emergency exits and fire extinguishers, and responding to fire or evacuation scenarios</p>
+								<h3>Rooted</h3>
+								<p>A Global Game Jam 2023 game where you explore Chichén Itzá’s pyramid as a tomb raider, confronting mythical guardians to steal Kukulkan’s enchanted feather headdress.</p>
 							</article>							
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb" controls>
 									<source src="videos/02.mp4" type="video/mp4">
 									Tu navegador no soporta la reproducción de videos.
 								</video>
-								<h3>Previon VR</h3>
-								<p>Developed for the 2023 hackathon, this virtual reality project set in the Alameda neighborhood of Queretaro, Mexico allows users to experience urban traffic from multiple perspectives, including those of drivers and pedestrians with varying abilities. The project aims to raise awareness about the right to mobility and the challenges posed by road violence.</p>
+								<h3>CATS TD</h3>
+								<p>A tower defense game where cats protect their territory against incoming waves of yarn balls. It features a dynamic difficulty system that scales based on wave progression and player economy, encouraging strategic resource management. It includes a variety of unique cats that can be individually upgraded, unlocking new transformations or special powers to unleash powerful strategies.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb" controls>
 									<source src="videos/03.mp4" type="video/mp4">
 									Tu navegador no soporta la reproducción de videos.
 								</video>
-								<h3>Milling Machine VR</h3>
-								<p>A VR training simulation for learning the safe and efficient operation of a milling machine. Users are guided through essential procedures, including setting up the equipment and performing various cuts on a metal block. The training concludes with a practical exam to apply what has been learned during the simulation.</p>
+								<h3>Folter Castle</h3>
+								<p>A visual novel/psychological horror game where you play as a kidnapped man, his memory clouded and fragmented by disturbing flashbacks of a large, deformed figure carrying him into a dungeon. Upon waking, you attempt to escape through the eerie halls of Folter Castle, confronting unsettling scenes such as human silhouettes and medieval torture devices. These discoveries lead you to question whether the creature is truly responsible for the horrors within.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb" controls>
 									<source src="videos/04.mp4" type="video/mp4">
 									Tu navegador no soporta la reproducción de videos.
 								</video>
-								<h3>Automaton Hunters VR</h3>
+								<h3>Automaton Hunters</h3>
 								<p>Automaton Hunters is an intense VR shooter, to escape the virtual world by defeating waves of enemies mastering a variety of weapons to survive.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -88,16 +88,32 @@
 									<source src="videos/05.mp4" type="video/mp4">
 									Tu navegador no soporta la reproducción de videos.
 								</video>
-								<h3>Cat-A!!!-clysm VR</h3>
-								<p>A Global Game Jam 2024 game, this on-rails VR shooter immerses you in a cat's dream. After observing its owner play video games, the feline envisions a bizarre world dominated by chaos and war, where you'll face surreal challenges and intense battles.</p>
+								<h3>AI</h3>
+								<p>This state machine AI goes through several phases. It starts in a “rage” state (indicated by green) before moving into an “alert” phase (indicated by yellow). As the situation deteriorates, the AI enters an aggressive attack mode (indicated by red).</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb" controls>
 									<source src="videos/06.mp4" type="video/mp4">
 									Tu navegador no soporta la reproducción de videos.
 								</video>
-								<h3>Habitra AR</h3>
+								<h3>Broken Mind</h3>
 								<p>An AR app that lets users preview houses before purchase, visualizing the property with customizable elements such as gardens, vehicles, trees, paint colors, and other variations. This interactive experience helps users design and explore their ideal home before construction or acquisition.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<video class="image fit thumb" controls>
+									<source src="videos/07.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Live Architect</h3>
+								<p>An AR app that lets users preview houses before purchase, visualizing the property with customizable elements such as gardens, vehicles, trees, paint colors, and other variations. This interactive experience helps users design and explore their ideal home before construction or acquisition.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<video class="image fit thumb" controls>
+									<source src="videos/08.mp4" type="video/mp4">
+									Tu navegador no soporta la reproducción de videos.
+								</video>
+								<h3>Cutman Engine</h3>
+								<p>CutmanEngine is a graphic motor developed in C++ using Visual Studio and Direct3D for texturing. It manages core components (window, device, swap chain, views). It provides utilities for shaders, texture/model loading, and a scene UI. Its main loop processes messages, updates, and renders real-time graphics.</p>
 							</article>
 						</div>
 					</section>
