--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 									<source src="videos/05.mp4" type="video/mp4">
 									Tu navegador no soporta la reproducción de videos.
 								</video>
-								<h3>AI</h3>
-								<p>This state machine AI goes through several phases. It starts in a “rage” state (indicated by green) before moving into an “alert” phase (indicated by yellow). As the situation deteriorates, the AI enters an aggressive attack mode (indicated by red).</p>
+								<h3>AI Sate Machine</h3>
+								<p>A AI state machine goes through several phases. It starts in a “rage” state (indicated by green) before moving into an “alert” phase (indicated by yellow). As the situation deteriorates, the AI enters an aggressive attack mode (indicated by red).</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb" controls>
@@ -97,7 +97,7 @@
 									Tu navegador no soporta la reproducción de videos.
 								</video>
 								<h3>Broken Mind</h3>
-								<p>An AR app that lets users preview houses before purchase, visualizing the property with customizable elements such as gardens, vehicles, trees, paint colors, and other variations. This interactive experience helps users design and explore their ideal home before construction or acquisition.</p>
+								<p>A puzzle horror/survival game where you awaken in an abandoned school, its corridors echoing with whispers and distant footsteps. Your memory is fractured, with glimpses of a violent incident and a haunting voice urging you to “put the pieces back together.” To escape, you must solve intricate puzzles scattered throughout the school while evading paranormal entities that block your way or hunt you down. Every puzzle solved brings you closer to freedom or to the truth that shattered your mind.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb" controls>
@@ -105,7 +105,7 @@
 									Tu navegador no soporta la reproducción de videos.
 								</video>
 								<h3>Live Architect</h3>
-								<p>An AR app that lets users preview houses before purchase, visualizing the property with customizable elements such as gardens, vehicles, trees, paint colors, and other variations. This interactive experience helps users design and explore their ideal home before construction or acquisition.</p>
+								<p>A house visualization and construction tool where users can create architectural models from scratch or import their own 3D assets. The application includes a library of preset shapes for quick prototyping, as well as options to save and export completed projects. Powered by AI, it can generate immersive virtual walkthroughs, allowing realistic presentations of houses, buildings, or scale models for design and planning purposes.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<video class="image fit thumb" controls>
